BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Address_vod__c.object
<CustomObject>
    <description>This object stores all addresses for each account profile as well as DEA and State Licenses for physicians.  The State Licenses are maintained across Address records based on the Address_trigger_vod trigger.</description>
    <fields>
        <fullName>ADDRESS_LINE_3_BMS__c</fullName>
        <label>CMEH Address Line 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASSMCA_vod__c</fullName>
        <description>The ASSMCA field stores the equivalent of the DEA # for Puerto Rican address records.</description>
        <label>ASSMCA</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_vod__c</fullName>
        <description>The Account field represents the Account that Address is related to.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Address_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Address_Source_Country_BMS_CORE__c</fullName>
        <description>JW 2013.05.16 - Changed to TEXT(2)</description>
        <label>Address Source Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Status_BMS_CORE__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture the status of an address record.</description>
        <label>Address Status</label>
        <picklist>
            <picklistValues>
                <fullName>Flag as Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Flag for Delete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address_Type_BMS_CORE__c</fullName>
        <label>Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>BILL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HEAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SHIP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address_Visit_Pressure_BMS_EMEA__c</fullName>
        <description>VPRO EMEA Mar-15: Indicator used by FR</description>
        <label>Address Visit Pressure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Address_line_2_vod__c</fullName>
        <description>Second line of street address. The first line is stored in the name field of the address record.</description>
        <label>Address line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allow_Luncheon_BMS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VPRO - February 2012 - BMS Oncology Requirements &amp; Design: Custom flag to identify address records that allow luncheons.</description>
        <label>Allow Luncheon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Appt_Required_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if an appointment is required for this address</description>
        <label>Appt. Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_25_of_your_patients_adults_BMS_US__c</fullName>
        <description>Orencia Campaign questions.</description>
        <label>Are &gt;25% of your patients adults?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Best_Times_vod__c</fullName>
        <description>Used by the Office Best Times control to store the best time to visit this address.</description>
        <label>Best Times</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Billing_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to determine if an Address serves as a billing address.</description>
        <label>Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brick_vod__c</fullName>
        <description>The Brick that corresponds to the Address for use in International implementations.  The Brick value is utilized by the Territory Management process for alignments.</description>
        <label>Brick</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Name_BMS_EMEA__c</fullName>
        <description>BMS ACN : Sept 2016 (Q3 LRM) - Field to display the building name of the address.</description>
        <label>Building Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to determine if an Address serves as a business address.</description>
        <label>Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CDS_Expiration_Date_vod__c</fullName>
        <description>The expiration date of the CDS registration number.</description>
        <label>CDS Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CDS_Status_vod__c</fullName>
        <description>The status of the CDS registration number. This field should be set to either Valid_vod or Invalid_vod. Invalid_vod will restrict Controlled Substance sampling at this Address in states where a CDS is required.</description>
        <label>CDS Status</label>
        <picklist>
            <picklistValues>
                <fullName>Valid_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CDS_vod__c</fullName>
        <description>The CDS registration number for the corresponding state of the address.</description>
        <label>CDS #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_vod__c</fullName>
        <description>City of the Address</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_vod__c</fullName>
        <description>Comments for this address.</description>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concatenated_Address_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to display the concatenation of an address along with the name of the account that it is associated with.</description>
        <externalId>true</externalId>
        <label>Concatenated Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name_BMS_CA__c</fullName>
        <label>Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Title_BMS_CA__c</fullName>
        <label>Contact Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Controlled_Address_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true then this address is controlled by child account push.</description>
        <label>Controlled Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Controlling_Address_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Address that was used as a template to create the address by the child account push.</description>
        <label>Controlling Address</label>
        <referenceTo>Address_vod__c</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Controlling_Address_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_vod__c</fullName>
        <description>The Country field stores the Country of the Address record.  The picklist values should be the two digit code, such as &quot;uk&quot; for the United Kingdom.</description>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BQ</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Master_Status_vod__c</fullName>
        <description>Corresponds to the validation status of a record in the customer master. This field should not be modified.</description>
        <label>Customer Master Status</label>
        <picklist>
            <picklistValues>
                <fullName>Staging_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valid_vod</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Under_Review_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DEA_Address_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to define if the Address record is a DEA Address and should be handled accordingly</description>
        <label>DEA Address?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DEA_Expiration_Date_vod__c</fullName>
        <description>DEA license expiration date.  The Expiration Date must be in the future if a Physician is to be allowed to receive Controlled Substance Samples.</description>
        <label>DEA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DEA_License_Address_vod__c</fullName>
        <description>DEA License Address is the Address stored on the physical DEA License for the Account.  The DEA License Address field is compared to the Address fields for this specific record and is used in the DEA License validation for controlled substance sampling.</description>
        <label>DEA License Address</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DEA_Schedule_vod__c</fullName>
        <description>Comma delimited list of Schedules  of Drugs that a Physician is able to receive at this Address</description>
        <label>DEA Schedule</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEA_Status_vod__c</fullName>
        <description>DEA Status for the Physician&apos;s DEA License.  This field should be set to either Valid_vod or Invalid_vod.  Valid_vod will allow the Physician to receive Controlled Substances at this Address.</description>
        <label>DEA Status</label>
        <picklist>
            <picklistValues>
                <fullName>Valid_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DEA_vod__c</fullName>
        <description>DEA license number.  Determines if a Physician is able to receive Controlled Substance Samples at this Address.</description>
        <label>DEA #</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_accept_samples_BMS_US__c</fullName>
        <description>Orencia Campaign questions</description>
        <label>Do you accept samples?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_you_have_infusion_capabil_BMS_US__c</fullName>
        <description>Orencia Campaign questions</description>
        <label>Do you have infusion capabilities?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Eligibility_Questions_Updated_Date_BMS__c</fullName>
        <label>Eligibility Questions Last Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Entity_Reference_Id_vod__c</fullName>
        <description>This Veeva field ensures proper synchronization even after account merges or territory realignments.</description>
        <label>Entity Reference Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID is only used for data loading.</description>
        <externalId>true</externalId>
        <label>BPA ID</label>
        <length>120</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fax_2_vod__c</fullName>
        <description>Alternate fax number for the Account at this Address.</description>
        <label>Fax 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fax_vod__c</fullName>
        <description>Fax number for the Account at this Address.</description>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Flagged_for_Delete_On_BMS__c</fullName>
        <description>VPRO - May 2012 - BMS Oncology Requirements &amp; Design: Custom field to capture the date an address record was flagged for delete.  This field is populated by the &quot;BMS Address Flagged for Delete&quot; workflow.</description>
        <label>Flagged for Delete On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Form_Expiration_Date_BMS_SHARED__c</fullName>
        <label>Form Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Form_Flag_BMS_SHARED__c</fullName>
        <label>Form Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Form Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Form On File</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox that determines if the Address serves as a home address.</description>
        <label>Home</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Inactive checkbox determines if the Address record will be displayed in the Call Report and My Schedule Address Picklist for both online and offline implementations.  If the Inactive checkbox is checked, then the Address record will not be displayed.</description>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_in_Territory_Assignment_vod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When this is checked the address will be included in the territory assignment process even if it is not a primary address.</description>
        <label>Include in Territory Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latitude_vod__c</fullName>
        <description>Latitude of this address. Used for mapping. This value is set to blank via trigger whenever a relevant address field changes. If zero, the latitude is written from the &quot;MyMaps&quot; functionality when the user maps this address. This field can be pre-populated from an external program.</description>
        <label>Latitude</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>License_Expiration_Date_BMS_SHARED__c</fullName>
        <label>License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Expiration_Date_vod__c</fullName>
        <description>State License Expiration Date.  The State License Expiration Date is maintained across Addresses for an Account for the same State by the Address_trigger_vod trigger on the Address object.</description>
        <label>License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Status_vod__c</fullName>
        <description>State License Status.  The State License Status is maintained across Addresses for an Account for the same State by the Address_trigger_vod trigger on the Address object.</description>
        <label>License Status</label>
        <picklist>
            <picklistValues>
                <fullName>New_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valid_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sampled_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>License_Valid_To_Sample_vod__c</fullName>
        <description>License Valid to Sample formula defines if a License is Valid or Invalid and determines if an Account can receive and sign for Samples in the VBioPharma application.</description>
        <formula>IF(LEN( TRIM(License_vod__c )) &lt;1,&quot;Invalid&quot;,IF(ISNULL( License_Expiration_Date_vod__c ) ,&quot;Invalid&quot;,IF(AND( License_Expiration_Date_vod__c &gt; TODAY() ,ISPICKVAL(License_Status_vod__c, &quot;Valid_vod&quot;)),&quot;Valid&quot;, &quot;Invalid&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Valid To Sample</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_vod__c</fullName>
        <description>State License Number for the corresponding State of the Address.  The State License Number is maintained across Addresses for an Account for the same State by the Address_trigger_vod trigger on the Address object.</description>
        <label>License #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the &quot;Locked&quot; field is set to true, only users with the &quot;Modify All Data&quot; privilege can edit the &quot;Address Line 1(Name)&quot; field or delete the record. If the &quot;Locked&quot; field is null, false or absent, then the trigger should do nothing. The &quot;Locked&quot; field would be best left off of &quot;Rep Maintained&quot; layouts.</description>
        <label>Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Longitude_vod__c</fullName>
        <description>Longitude of this address. Used for mapping. This value is set to blank via trigger whenever a relevant address field changes. If zero, the longitude is written from the &quot;MyMaps&quot; functionality when the user maps this address. This field can be pre populated from an external program.</description>
        <label>Longitude</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mailing_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox that determines if an Address serves as a mailing address.</description>
        <label>Mailing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Map_vod__c</fullName>
        <description>Displays a hyperlink to view the address in Google maps.</description>
        <formula>HYPERLINK(&quot;http://maps.google.com/maps?f=q&amp;hl=en&amp;q=&quot; &amp; Name &amp; &quot;+&quot; &amp; City_vod__c , &quot;map&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Align_Id_vod__c</fullName>
        <description>Globally unique identifier for this object. This Id is managed by Align</description>
        <label>Master Align Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mini_Brick_BMS_EMEA__c</fullName>
        <label>Mini Brick</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Network_ASSMCA_Entity_ID_vod__c</fullName>
        <description>Network entity ID of the ASSMCA license ID associated to this address</description>
        <label>Network ASSMCA Entity ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_CDS_Entity_ID_vod__c</fullName>
        <description>Network entity ID of the CDS license ID associated to this address</description>
        <label>Network CDS Entity ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_DEA_Entity_ID_vod__c</fullName>
        <description>Network entity ID of the DEA license ID associated to this address</description>
        <label>Network DEA Entity ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_License_Entity_ID_vod__c</fullName>
        <description>Network entity ID of the State license ID associated to this address</description>
        <label>Network License Entity ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Sample_Eligibility_vod__c</fullName>
        <description>Contains the eligibility of the HCP associated with this address to receive samples, as described in the customer master data</description>
        <label>Sample Eligibility</label>
        <picklist>
            <picklistValues>
                <fullName>Eligible_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ineligible_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_Address_Copy_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Override automated push of address.</description>
        <label>No Address Copy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Office_BMS__c</fullName>
        <defaultValue>true</defaultValue>
        <description>VPRO - February 2012 - BMS Oncology Requirements &amp; Design: Custom flag to identify Office addresses.</description>
        <label>Office</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Office_Notes_vod__c</fullName>
        <description>Area to keep notes for this address.</description>
        <label>Office Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone_2_vod__c</fullName>
        <description>Alternate phone number for the Account for this Address.</description>
        <label>Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_vod__c</fullName>
        <description>Primary phone number for the Account for this Address.</description>
        <label>Phone 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Address serves as the primary address for the associated account. A trigger insures that there is only one primary address.</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region_BMS_EMEA__c</fullName>
        <description>BMS ACN : Sept 2016 (Q3 GRM) - Field to display region related to the customer address .</description>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_BMS_EMEA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>BMS EMEA: June 2016 (Q2 GRM) - New Field created to lookup the Role Information from the Role Object.</description>
        <label>Role</label>
        <referenceTo>Role_BMS_EMEA__c</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role_formula_BMS_EMEA__c</fullName>
        <description>BMS EMEA: June 2016 (Q2 GRM) - New Formula Field created to display the Role Lookup in a Text Format to be used in My Customer Views.</description>
        <formula>Role_BMS_EMEA__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Authorization_Cert_BMS_SHARED__c</fullName>
        <label>Sample Authorization Cert Form Needed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sample_Ineligible_BMS_SHARED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sample Ineligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sample_Send_Status_vod__c</fullName>
        <description>Indicates the availability of an address record for selection in the Ship To Address field on the call report.
Pending_vod - Newly created address record that is not able to be shipped samples until address is verified
Valid_vod - Address record that is able to be shipped samples
Invalid_vod - Address record that is not able to be shipped samples</description>
        <label>Sample Send Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valid_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sample_Status_Reason_BMS_SHARED__c</fullName>
        <label>Sample Status Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sample_Status_vod__c</fullName>
        <description>Sample Status defines the status of the State License and controls the Sample Status.  Sample Status of Valid represents a Green indicator.  Sample Status of Pending represents a Yellow Indicator.  Sample Status of Invalid represents a Red Indicator.</description>
        <formula>IF(LEN( TRIM(License_vod__c )) &lt; 1,&quot;Invalid&quot;,IF(Sample_Ineligible_BMS_SHARED__c=TRUE,&quot;Invalid&quot;,IF(ISNULL( License_Expiration_Date_vod__c ),&quot;Invalid&quot;,IF(AND( License_Expiration_Date_vod__c &gt; TODAY() ,ISPICKVAL(License_Status_vod__c, &quot;Valid_vod&quot;)),&quot;Valid&quot;,IF(AND( License_Expiration_Date_vod__c &gt; TODAY() ,ISPICKVAL(License_Status_vod__c, &quot;New_vod&quot;)), &quot;Pending&quot;,&quot;Invalid&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sample Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox that determines if an Address serves as a shipping address</description>
        <label>Shipping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_vod__c</fullName>
        <description>Source of the Address information.  The Source field should be set if a System Integration is utilized to create and maintain Addresses.</description>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Manual</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>HMS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Staff_notes_vod__c</fullName>
        <description>Area to keep notes about the staff at this address.</description>
        <label>Staff notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State_BMS_EMEA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>BMS EMEA: June 2016 (Q2 GRM) - New Field created to lookup the State Information from the State Object.</description>
        <label>State</label>
        <referenceTo>State_BMS_EMEA__c</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_formula_BMS_EMEA__c</fullName>
        <description>BMS EMEA: June 2016 (Q2 GRM) - New Formula Field created to display the State Lookup in a Text Format to be used in My Customer Views.</description>
        <formula>State_BMS_EMEA__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
</CustomObject>